--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
                 </span>
 
                 <h3 class="card-title">My Skillsets</h3>
-                <h5 class="card-title">
-                    General
+                <h5 class="card-title"> General
                 </h5>
                 <p class="card-text">5S - C.P.R. - Communication - Continuous Improvement - Data Analytics &
                     Visualization - Forecasting - Gemba Kaizen - De-escalation - Problem Solving - Risk Management -
@@ -143,7 +142,22 @@
     </section>
 
 
-
+    <!-- EDUCATION -->
+    <section class="container education-container">
+        <h1 class="title">Education </h1>
+        <article class="education-item">
+            <img src="images/UCB.svg.png" class="school" />
+            <h3 class="subtitle">UC Berkeley</h3>
+            <span class="text-muted">Data Analysis Bootcamp | May 2022 - Nov 2022</span>
+        </article>
+        <hr />
+        <article class="education-item">
+            <img src="images/1200px-Portland_State_Vikings_logo.svg.png" class="school" />
+            <h3 class="subtitle">Portland State University</h3>
+            <span class="text-muted">Bachelor of Science (BS), Supply and Logistics | Sept 2011 - June 2016</span>
+        </article>
+        <hr />
+    </section>
 
 
     <!-- TIMELINE -->
@@ -262,52 +276,49 @@
                 </div>
             </div>
         </div>
+        <!-- Random -->
+        <section class="container education-container">
+            <h1 class="random-proj">Random Side Projects</h1>
+                <span class="text-muted"> </span>
+            <hr />
+                <div class='tableauPlaceholder' id='viz1670283286963' style='position: relative'><noscript><a href='#'><img
+                                alt='Dashboard 2 '
+                                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Na&#47;NaturalGasContractSpendingbyRecipient&#47;Dashboard2&#47;1_rss.png'
+                                style='border: none' /></a>
+                    </noscript><object class='tableauViz' style='display:none;'>
+                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                        <param name='embed_code_version' value='3' />
+                        <param name='site_root' value='' />
+                        <param name='name' value='NaturalGasContractSpendingbyRecipient&#47;Dashboard2' />
+                        <param name='tabs' value='no' />
+                        <param name='toolbar' value='yes' />
+                        <param name='static_image'
+                            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Na&#47;NaturalGasContractSpendingbyRecipient&#47;Dashboard2&#47;1.png' />
+                        <param name='animate_transition' value='yes' />
+                        <param name='display_static_image' value='yes' />
+                        <param name='display_spinner' value='yes' />
+                        <param name='display_overlay' value='yes' />
+                        <param name='display_count' value='yes' />
+                        <param name='language' value='en-US' />
+                        <param name='filter' value='publish=yes' />
+                    </object></div>
+                <script type='text/javascript'>
+                    var divElement = document.getElementById('viz1670283286963');
+                    var vizElement = divElement.getElementsByTagName('object')[0];
+                    if (divElement.offsetWidth > 800) { vizElement.style.minWidth = '420px'; vizElement.style.maxWidth = '1000px'; vizElement.style.width = '100%'; vizElement.style.minHeight = '587px'; vizElement.style.maxHeight = '887px'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.minWidth = '420px'; vizElement.style.maxWidth = '650px'; vizElement.style.width = '100%'; vizElement.style.minHeight = '587px'; vizElement.style.maxHeight = '887px'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '727px'; }
+                    var scriptElement = document.createElement('script');
+                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                    vizElement.parentNode.insertBefore(scriptElement, vizElement);              
+                </script>
+                <hr />
+                <h2 class="title">Amazon Word Clouds</h2>
+                <span class="text-muted"> Visualization of the most common words used in Amazons <a href="https://ir.aboutamazon.com/annual-reports-proxies-and-shareholder-letters/default.aspx"> investor & filing reports </a></span>
+                <h3 class="card-title">2021 Annual Report</h3>
+                <div style="text-align:center;"> <img src="images/amazon_wordcloud.png" alt="image" /> </div>
+        </section>
     </div>
 
 
-    <!-- EDUCATION -->
-    <section class="container education-container">
-        <h1 class="title">Education </h1>
-        <article class="education-item">
-            <img src="images/UCB.svg.png" class="school" />
-            <h3 class="subtitle">UC Berkeley</h3>
-            <span class="text-muted">Data Analysis Bootcamp | May 2022 - Nov 2022</span>
-        </article>
-        <hr />
-        <article class="education-item">
-            <img src="images/1200px-Portland_State_Vikings_logo.svg.png" class="school" />
-            <h3 class="subtitle">Portland State University</h3>
-            <span class="text-muted">Bachelor of Science (BS), Supply and Logistics | Sept 2011 - June 2016</span>
-        </article>
-        <hr />
-
-
-
-    </section>
-
-    <section class="container">
-        <div class='tableauPlaceholder' id='viz1670283286963' style='position: relative'><noscript><a href='#'><img alt='Dashboard 2 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Na&#47;NaturalGasContractSpendingbyRecipient&#47;Dashboard2&#47;1_rss.png' style='border: none' /></a>
-        </noscript><object class='tableauViz'  style='display:none;'>
-            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-            <param name='embed_code_version' value='3' /> 
-            <param name='site_root' value='' />
-            <param name='name' value='NaturalGasContractSpendingbyRecipient&#47;Dashboard2' />
-            <param name='tabs' value='no' />
-            <param name='toolbar' value='yes' />
-            <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Na&#47;NaturalGasContractSpendingbyRecipient&#47;Dashboard2&#47;1.png' /> 
-            <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
-            <param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
-            <param name='display_count' value='yes' /><param name='language' value='en-US' />
-            <param name='filter' value='publish=yes' /></object></div>           
-             <script type='text/javascript'>          
-                var divElement = document.getElementById('viz1670283286963');         
-                var vizElement = divElement.getElementsByTagName('object')[0];         
-                if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='420px';vizElement.style.maxWidth='1000px';vizElement.style.width='100%';vizElement.style.minHeight='587px';vizElement.style.maxHeight='887px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='420px';vizElement.style.maxWidth='650px';vizElement.style.width='100%';vizElement.style.minHeight='587px';vizElement.style.maxHeight='887px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}             
-                var scriptElement = document.createElement('script');        
-                scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                 
-                 vizElement.parentNode.insertBefore(scriptElement, vizElement);              
-          </script>
-    </section>
 
     <!-- AVAILABLE FOR WORK -->
     <section class="container-color">
