--- a/index.html
+++ b/index.html
@@ -313,8 +313,12 @@
                 <hr />
                 <h2 class="title">Amazon Word Clouds</h2>
                 <span class="text-muted"> Visualization of the most common words used in Amazons <a href="https://ir.aboutamazon.com/annual-reports-proxies-and-shareholder-letters/default.aspx"> investor & filing reports </a></span>
+                <h3 class="card-title">2020 Annual Report</h3>
+                <div style="text-align:center;"> <img src="images/2020_10k.png" alt="image" /> </div>
                 <h3 class="card-title">2021 Annual Report</h3>
-                <div style="text-align:center;"> <img src="images/amazon_wordcloud.png" alt="image" /> </div>
+                <div style="text-align:center;"> <img src="images/2021_10k.png" alt="image" /> </div>
+                <h3 class="card-title">2022 Annual Report</h3>
+                <div style="text-align:center;"> <img src="images/2022_10k.png" alt="image" /> </div>
         </section>
     </div>
 
