--- a/index.html
+++ b/index.html
@@ -279,54 +279,62 @@
         <!-- Random -->
         <section class="container education-container">
             <h1 class="random-proj">Random Side Projects</h1>
-                <span class="text-muted"> </span>
+            <span class="text-muted"> </span>
             <hr />
-                <div class='tableauPlaceholder' id='viz1670283286963' style='position: relative'><noscript><a href='#'><img
-                                alt='Dashboard 2 '
-                                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Na&#47;NaturalGasContractSpendingbyRecipient&#47;Dashboard2&#47;1_rss.png'
-                                style='border: none' /></a>
-                    </noscript><object class='tableauViz' style='display:none;'>
-                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-                        <param name='embed_code_version' value='3' />
-                        <param name='site_root' value='' />
-                        <param name='name' value='NaturalGasContractSpendingbyRecipient&#47;Dashboard2' />
-                        <param name='tabs' value='no' />
-                        <param name='toolbar' value='yes' />
-                        <param name='static_image'
-                            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Na&#47;NaturalGasContractSpendingbyRecipient&#47;Dashboard2&#47;1.png' />
-                        <param name='animate_transition' value='yes' />
-                        <param name='display_static_image' value='yes' />
-                        <param name='display_spinner' value='yes' />
-                        <param name='display_overlay' value='yes' />
-                        <param name='display_count' value='yes' />
-                        <param name='language' value='en-US' />
-                        <param name='filter' value='publish=yes' />
-                    </object></div>
-                <script type='text/javascript'>
-                    var divElement = document.getElementById('viz1670283286963');
-                    var vizElement = divElement.getElementsByTagName('object')[0];
-                    if (divElement.offsetWidth > 800) { vizElement.style.minWidth = '420px'; vizElement.style.maxWidth = '1000px'; vizElement.style.width = '100%'; vizElement.style.minHeight = '587px'; vizElement.style.maxHeight = '887px'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.minWidth = '420px'; vizElement.style.maxWidth = '650px'; vizElement.style.width = '100%'; vizElement.style.minHeight = '587px'; vizElement.style.maxHeight = '887px'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '727px'; }
-                    var scriptElement = document.createElement('script');
-                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-                    vizElement.parentNode.insertBefore(scriptElement, vizElement);              
-                </script>
-                <hr />
-                <h2 class="title">Amazon Word Clouds</h2>
-                <span class="text-muted"> Most common <span title="'Stop Words' Excluded">words*</span> used in Amazons annual  financial reports (<a href="https://ir.aboutamazon.com/annual-reports-proxies-and-shareholder-letters/default.aspx">10-K</a>).</span>
-                <h3 class="card-title">2018 Annual Report</h3>
-                <div style="text-align:center;"> <img src="images/2018_10k.png" alt="image" /> </div>
-                <h3 class="card-title">2019 Annual Report</h3>
-                <div style="text-align:center;"> <img src="images/2019_10k.png" alt="image" /> </div>
-                <h3 class="card-title">2020 Annual Report</h3>
-                <div style="text-align:center;"> <img src="images/2020_10k.png" alt="image" /> </div>
-                <h3 class="card-title">2021 Annual Report</h3>
-                <div style="text-align:center;"> <img src="images/2021_10k.png" alt="image" /> </div>
-                <h3 class="card-title">2022 Annual Report</h3>
-                <div style="text-align:center;"> <img src="images/2022_10k.png" alt="image" /> </div>
+            <div class='tableauPlaceholder' id='viz1670283286963' style='position: relative'><noscript><a href='#'><img
+                            alt='Dashboard 2 '
+                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Na&#47;NaturalGasContractSpendingbyRecipient&#47;Dashboard2&#47;1_rss.png'
+                            style='border: none' /></a>
+                </noscript><object class='tableauViz' style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='NaturalGasContractSpendingbyRecipient&#47;Dashboard2' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image'
+                        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Na&#47;NaturalGasContractSpendingbyRecipient&#47;Dashboard2&#47;1.png' />
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en-US' />
+                    <param name='filter' value='publish=yes' />
+                </object></div>
+            <script type='text/javascript'>
+                var divElement = document.getElementById('viz1670283286963');
+                var vizElement = divElement.getElementsByTagName('object')[0];
+                if (divElement.offsetWidth > 800) { vizElement.style.minWidth = '420px'; vizElement.style.maxWidth = '1000px'; vizElement.style.width = '100%'; vizElement.style.minHeight = '587px'; vizElement.style.maxHeight = '887px'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.minWidth = '420px'; vizElement.style.maxWidth = '650px'; vizElement.style.width = '100%'; vizElement.style.minHeight = '587px'; vizElement.style.maxHeight = '887px'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '727px'; }
+                var scriptElement = document.createElement('script');
+                scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                vizElement.parentNode.insertBefore(scriptElement, vizElement);              
+            </script>
+            <hr />
+            <h2 class="title">Amazon Annual Report Word Clouds</h2>
+            <span class="text-muted"> Most common <span title="'Stop Words' Excluded">words*</span> used in Amazons
+                annual financial reports (<a
+                    href="https://ir.aboutamazon.com/annual-reports-proxies-and-shareholder-letters/default.aspx">10-K</a>).</span>
+            <div class="row">
+                <div class="column" style="background-color:rgb(255, 255, 255);">
+                    <h2>2018</h2>
+                    <a id="single_image1"><img src="images/2018_10k.png" alt="" /></a>
+                </div>
+                <div class="column" style="background-color:rgb(255, 255, 255);">
+                    <h2>2019</h2>
+                    <a id="single_image2"><img src="images/2019_10k.png" alt="" /></a>
+                </div>
+                <div class="column" style="background-color:rgb(255, 255, 255);">
+                    <h2>2020</h2>
+                    <a id="single_image3"><img src="images/2020_10k.png" alt="" /></a>
+                </div>
+                <div class="column" style="background-color:rgb(255, 255, 255);">
+                    <h2>2021</h2>
+                    <a id="single_image3"><img src="images/2021_10k.png" alt="" /></a>
+                </div>
+            </div>
         </section>
     </div>
-
-
 
     <!-- AVAILABLE FOR WORK -->
     <section class="container-color">
