--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
                 <h3 class="card-title">My Skillsets</h3>
                 <h5 class="card-title"> General
                 </h5>
-                <p class="card-text">5S - C.P.R. - Communication - Continuous Improvement - Data Analytics &
-                    Visualization - Forecasting - Gemba Kaizen - De-escalation - Problem Solving - Risk Management -
-                    Strategic Planning - Project Management - Human Resource Partner - Team Management </p>
+                <p class="card-text">5S - Communication - Continuous Improvement - Data Analytics & Visualization - Forecasting - Gemba Kaizen - De-escalation - Problem Solving - Risk Management - Strategic Planning - Project Management - Human Resource Partner - Team Management </p>
                 <h5 class="card-title">
                     Programming Languages
                 </h5>
@@ -125,9 +123,7 @@
                     Technologies
                 </h5>
                 <p class="card-text">
-                    APIs - AWS - D3.js - Deep Learning - GeoJSON - Hadoop - Leaflet - MySQL - MATLAB - Matplotlib -
-                    Machine Learning- NoSQL – ORMs - Pandas - Plotly - SQL Database - SQLAlchemy – SQLite - Spark -
-                    Scikit-learn - Tableau - TensorFlow - Web Scraping - Web Visualization
+                    AWS S3 - D3.js - Deep Learning - GeoJSON - Hadoop - HTML/CSS - Leaflet - MySQL - MATLAB - Matplotlib - Machine Learning- NoSQL – ORMs - Pandas - Plotly - SQL Database - SQLAlchemy – SQLite - Spark - Scikit-learn - Tableau - TensorFlow - Web Scraping - Web Visualization
                 </p>
             </div>
         </div>
