--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="title">Thanks for stopping by!
         </h1>
         <h3 class="subtitle">
-            Supply chain manager with 6 years' experience in various roles across Amazon fulfillment & logistics. Most recent title was L6 Delivery Operations Manager leading a cross-functional team of 5 supervisory managers responsible for overseeing over ~40,000 daily deliveries across 10,000sq/mi of AMZL last mile delivery service area.
+            Supply chain manager with 6 years' experience in various roles across Amazon fulfillment & logistics. Most recent title was L6 Delivery Operations Manager leading a cross-functional team of 5 supervisory managers responsible for overseeing over ~40,000 daily deliveries across 10,000sq/mi of AMZL last mile delivery service area. </p>
             My time at Amazon gave me a great introduction to how impactful data can be if read and presented appropriately. As I developed my skills and dove deeper into the field, I began to realize that A) Excel can only get you so far, and B) There are way more powerful tools out there. I left Amazon to learn these skills by attending a 24-week Data Bootcamp provided by UC Berkeley. I'm currently looking for a role in the Business Intelligence world that would help me learn from the best!
 
 
