--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
         <h1 class="title">Thanks for stopping by!
         </h1>
         <h3 class="subtitle">
-            Supply chain manager with 6 years' experience in various roles across Amazon fulfillment & logistics. Most recent title was L6 Delivery Operations Manager leading a cross-functional team of 5 supervisory managers responsible for overseeing over ~40,000 daily deliveries across 10,000sq/mi of AMZL last mile delivery service area. </p>
-            My time at Amazon gave me a great introduction to how impactful data can be if read and presented appropriately. As I developed my skills and dove deeper into the field, I began to realize that A) Excel can only get you so far, and B) There are way more powerful tools out there. I left Amazon to learn these skills by attending a 24-week Data Bootcamp provided by UC Berkeley. I'm currently looking for a role in the Business Intelligence world that would help me learn from the best!
+            Supply chain manager with 6 years' experience in various roles across Amazon fulfillment & logistics.
+            Most recent title was L6 Delivery Operations Manager leading a cross-functional team of 5 supervisory
+            managers responsible for overseeing over 10,000sq/mi of AMZL last mile delivery service area. <br><br>
 
+            My time at Amazon gave me a great introduction to how impactful data can be if read and presented
+            appropriately.
+            As I developed my skills and dove deeper into the field, I began to realize that A) Excel can only get you
+            so far, and B) There are way more powerful tools out there.
+            <br><br> I left Amazon to learn these skills by attending a 24-week Data Bootcamp provided by UC Berkeley.
+            I'm currently looking for a role in the Data Analysis world that would support my continued development and
+            help me learn from the best!
 
         </h3>
     </section>
@@ -112,7 +120,9 @@
                 <h3 class="card-title">My Skillsets</h3>
                 <h5 class="card-title"> General
                 </h5>
-                <p class="card-text">5S - Communication - Continuous Improvement - Data Analytics & Visualization - Forecasting - Gemba Kaizen - De-escalation - Problem Solving - Risk Management - Strategic Planning - Project Management - Human Resource Partner - Team Management </p>
+                <p class="card-text">5S - C.P.R. - Communication - Continuous Improvement - Data Analytics &
+                    Visualization - Forecasting - Gemba Kaizen - De-escalation - Problem Solving - Risk Management -
+                    Strategic Planning - Project Management - Human Resource Partner - Team Management </p>
                 <h5 class="card-title">
                     Programming Languages
                 </h5>
@@ -123,7 +133,9 @@
                     Technologies
                 </h5>
                 <p class="card-text">
-                    AWS S3 - D3.js - Deep Learning - GeoJSON - Hadoop - HTML/CSS - Leaflet - MySQL - MATLAB - Matplotlib - Machine Learning- NoSQL – ORMs - Pandas - Plotly - SQL Database - SQLAlchemy – SQLite - Spark - Scikit-learn - Tableau - TensorFlow - Web Scraping - Web Visualization
+                    APIs - AWS - D3.js - Deep Learning - GeoJSON - Hadoop - Leaflet - MySQL - MATLAB - Matplotlib -
+                    Machine Learning- NoSQL – ORMs - Pandas - Plotly - SQL Database - SQLAlchemy – SQLite - Spark -
+                    Scikit-learn - Tableau - TensorFlow - Web Scraping - Web Visualization
                 </p>
             </div>
         </div>
@@ -320,6 +332,16 @@
                     <h2>2021</h2>
                     <a id="single_image3"><img src="images/2021_10k.png" alt="" /></a>
                 </div>
+                <div class="column" style="background-color:rgb(255, 255, 255);">
+                    <h2>2022</h2>
+                    <a id="single_image3"><img src="images/2022_10k.png" alt="" /></a>
+                </div>
+            </div>
+            <h2 class="title">World Cup Winners & Infant Population</h2>
+            <span class="text-muted">
+                I kept seeing jokes online about a baby boom happening to Argentina after they won the world cup. I was curious if this was a real phenomenon, so I decided to pull the historic data. It turns out winning the world cup doesn't have any real impact on a countries infant population. However what is interesting from the data is that there seems to be a 7 year cycle in the growth/reduction in the 0-1 infant population.</span>
+            <div class="center">
+                <img src="images/World_Cup_BirthRates.png" class="center"> 
             </div>
         </section>
     </div>
